[tool.poetry]
name = "blog-app"
version = "0.1.0"
description = ""
authors = ["Hasnain Hasib <hasibjoy332@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
jwt = "^1.3.1"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
